--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "ts-node ./src/server.ts"
+    "serve": "ts-node ./src/runner.ts"
   },
   "keywords": ["server", "web-server"],
   "author": "Abhishek B | Coderswat",
@@ -14,5 +14,8 @@
     "@types/node": "^20.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "bin": {
+    "server": "./bin/server"
   }
 }
