--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "WebServer using Node.js to serve HTML/CSS and JavaScript locally",
   "main": "lib/server.js",
+  "types": "./types/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "ts-node ./src/runner.ts"
